# CHALLENGE

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mc-lite.cpp  ms-lite.cpp
include/: client_application.h  cxxopts.hpp  log.h  message_client.h  message_client_creator.h  message_client_socket.h  message_handler.h  message_server.h  message_server_creator.h  message_server_socket.h  server_application.h
src/: client_application.cpp  log.cpp  log.h  message_client_socket.cpp  message_handler.cpp  message_server.cpp  message_server_socket.cpp  server_application.cpp
unit_test/: test-protocol.cpp
